--- a/src/app.html
+++ b/src/app.html
@@ -1,14 +1,22 @@
 <!doctype html>
-<html lang="en">
-    <head>
-        <link rel="icon" href="%sveltekit.assets%/favicon.png">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta charset="utf-8">
-        %sveltekit.head%
-    </head>
-    <body data-sveltekit-preload-data="hover">
-        <div style="display: contents">
-            %sveltekit.body%
-        </div>
-    </body>
+<html
+  lang="en">
+  <head>
+    <link
+      rel="icon"
+      href="%sveltekit.assets%/favicon.png" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1" />
+    <meta
+      charset="utf-8" />
+    %sveltekit.head%
+  </head>
+  <body
+    data-sveltekit-preload-data="hover">
+    <div
+      style="display: contents">
+      %sveltekit.body%
+    </div>
+  </body>
 </html>
