server error.html: align with app.HTML format
+ add missing meta

--- a/src/error.html
+++ b/src/error.html
@@ -10,11 +10,17 @@
       content="width=device-width, initial-scale=1" />
     <meta
       charset="utf-8" />
-    <title>%sveltekit.status%: %sveltekit.error.message%</title>
+    <title>Jimmy | %sveltekit.status%</title>
+    <meta
+      name="description"
+      content="Jimmy Luo's personal website" />
   </head>
   <body>
-    <h1>Error</h1>
-    <p>Status: %sveltekit.status%</p>
-    <p>Message: %sveltekit.error.message%</p>
+    <h1>
+      %sveltekit.status%
+    </h1>
+    <p>
+      %sveltekit.error.message%
+    </p>
   </body>
 </html>
