--- a/src/app.html
+++ b/src/app.html
@@ -1,21 +1,27 @@
 <!doctype html>
 <html
-  lang="en">
+  lang="en"
+>
   <head>
     <link
       rel="icon"
-      href="%sveltekit.assets%/favicon.png" />
+      href="%sveltekit.assets%/favicon.png"
+    />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1" />
+      content="width=device-width, initial-scale=1"
+    />
     <meta
-      charset="utf-8" />
+      charset="utf-8"
+    />
     %sveltekit.head%
   </head>
   <body
-    data-sveltekit-preload-data="hover">
+    data-sveltekit-preload-data="hover"
+  >
     <div
-      style="display: contents">
+      style="display: contents"
+    >
       %sveltekit.body%
     </div>
   </body>
