--- a/src/error.html
+++ b/src/error.html
@@ -1,19 +1,24 @@
 <!doctype html>
 <html
-  lang="en">
+  lang="en"
+>
   <head>
     <link
       rel="icon"
-      href="%sveltekit.assets%/favicon.png" />
+      href="%sveltekit.assets%/favicon.png"
+    />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1" />
+      content="width=device-width, initial-scale=1"
+    />
     <meta
-      charset="utf-8" />
+      charset="utf-8"
+    />
     <title>Jimmy | %sveltekit.status%</title>
     <meta
       name="description"
-      content="Jimmy Luo's personal website" />
+      content="Jimmy Luo's personal website"
+    />
   </head>
   <body>
     <h1>
