--- a/src/app.html
+++ b/src/app.html
@@ -3,18 +3,23 @@
   lang="en"
 >
   <head>
-    <link
-      rel="icon"
-      href="%sveltekit.assets%/favicon.png"
+    <meta
+      charset="utf-8"
     >
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1"
     >
-    <meta
-      charset="utf-8"
-    >
     %sveltekit.head%
+
+    <link
+      rel="icon"
+      href="%sveltekit.assets%/favicon.png"
+    >
+    <link
+      rel="apple-touch-icon"
+      href="%sveltekit.assets%/favicon.png"
+    >
   </head>
   <body
     data-sveltekit-preload-data="hover"
