--- a/src/error.html
+++ b/src/error.html
@@ -3,21 +3,28 @@
   lang="en"
 >
   <head>
-    <link
-      rel="icon"
-      href="%sveltekit.assets%/favicon.png"
+    <meta
+      charset="utf-8"
     >
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1"
     >
     <meta
-      charset="utf-8"
-    >
-    <title>Jimmy | %sveltekit.status%</title>
-    <meta
       name="description"
       content="Jimmy Luo's personal website"
+    >
+    <title>
+      Jimmy | %sveltekit.status%
+    </title>
+
+    <link
+      rel="icon"
+      href="%sveltekit.assets%/favicon.png"
+    >
+    <link
+      rel="apple-touch-icon"
+      href="%sveltekit.assets%/favicon.png"
     >
   </head>
   <body>
