--- a/src/app.html
+++ b/src/app.html
@@ -1,11 +1,7 @@
-<!doctype html>
-<html
-  lang="en"
->
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <meta
-      charset="utf-8"
-    >
+    <meta charset="utf-8">
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1"
@@ -21,12 +17,8 @@
       href="%sveltekit.assets%/favicon.png"
     >
   </head>
-  <body
-    data-sveltekit-preload-data="hover"
-  >
-    <div
-      style="display: contents"
-    >
+  <body data-sveltekit-preload-data="hover">
+    <div style="display: contents">
       %sveltekit.body%
     </div>
   </body>
